cmake_minimum_required(VERSION 3.5)
project(audio_tool LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
find_package(PkgConfig REQUIRED)
pkg_check_modules(SNDFILE sndfile)
include_directories(${SNDFILE_INCLUDE_DIRS})
link_directories(${SNDFILE_LIBRARY_DIRS})
add_executable(audio_tool main.cpp)
target_link_libraries(audio_tool ${SNDFILE_LIBRARIES})
